--- a/index.html
+++ b/index.html
@@ -311,8 +311,7 @@ freelancer (actual)</p>
           <div class="container">
             <h5>Trabajos</h5>
             <h2>Proyectos realizados</h2>
-            <p>En esta sección presentaré mis proyectos realizados a la fecha. Aún no están configurados, la imagenes son de prueba.</p>
-        </div>
+                    </div>
         <div class="row">
           <div className="flex row">
             <a class="div-imagen" style="text-decoration:none; cursor:pointer; margin-right: 20px" href="https://manga-coffee.vercel.app/">
@@ -332,11 +331,12 @@ freelancer (actual)</p>
            
           </a>
           <a
-          href="https://github.com/librotero"
+          href="https://github.com/librotero/Carteleria-Manna"
           role="button"
           data-mdb-ripple-color="dark"
           ><i class="fab fa-github"></i
         ></a>
+        <p>En curso</p>
           </div>    
           
         </div>
