--- a/paginaenconstruccion.html
+++ b/paginaenconstruccion.html
@@ -13,7 +13,10 @@
 </head>
 <body>
     <p>Sistema de gestión</p>
-    <h2>Carteleria Manna</h2>      
+    <h2>Carteleria Manna</h2>   
+    <div class="">
+        <center><img src="./img/inicio.PNG" width="1000"> </center>  
+    </div>
         
 </body
 </html>
